ahora sí fuera mokepones

--- a/estilos.css
+++ b/estilos.css
@@ -31,7 +31,7 @@ body {
 
 }
 
-.tarjeta-de-mokepon {
+.tarjeta-de-toypon {
     width: 200px;
     height: 130px;
     background-color: #756AB6;
@@ -45,7 +45,7 @@ body {
     font-size: 28px;
 }
 
-.tarjeta-de-mokepon img {
+.tarjeta-de-toypon img {
     width: 90px;
 }
 
