--- a/estilos.css
+++ b/estilos.css
@@ -181,6 +181,18 @@ input:checked + label {
     justify-content: center;
 }
 
+#ver-mapa button {
+    width: 105px;
+    height: 40px;
+    border-radius: 20px;
+    background-color: transparent;
+    border: 2px solid black;
+    color: white;
+    font-family: 'Roboto Mono', monospace;
+    font-size: 16px;
+    margin: 5px
+}
+
 @media (max-width: 500px) {
     .tarjetas, .tarjetas-ataques {
         flex-direction: column;
@@ -201,5 +213,11 @@ input:checked + label {
     
     .imagenes-combate img {
         width: 100px;
+    }
+
+    #ver-mapa button {
+        width: 100px;
+        font-size: 16px;
+        padding: 2px;
     }
 }
