--- a/estilos.css
+++ b/estilos.css
@@ -215,6 +215,25 @@ input:checked + label {
         width: 100px;
     }
 
+    #mapa {
+        width: 340px;
+        height: 240px;
+    }
+
+    .sub-mapa {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #sub-mapa1 {
+        margin-bottom: 0px;
+    }
+
+    #sub-mapa2 {
+        margin-top: 0px;
+    }
+
     #ver-mapa button {
         width: 100px;
         font-size: 16px;
